gap for gallery images; loading images with correct sizes (srcset, sizes), has new functions in ts which the html calls; created a real example project and altered the projectDetails to store array for mainImg and array of arrays for other images

--- a/berzsak/src/app/components/project/project.component.css
+++ b/berzsak/src/app/components/project/project.component.css
@@ -146,6 +146,7 @@
   overflow: hidden;
   align-items: center;
   justify-content: center;
+  gap: 0.2rem;
 }
 
 .gallery img {
